# optimal-ramp-fit

./: pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst
src/optimal_ramp_fit/: __init__.py  fitramp.py  optimal_ramp_fit_step.py
tests/: test_example.py  test_fitramp.py
