[project]
name = "optimal_ramp_fit"
authors = [
    {name = "Timothy Brandt", email = "tbrandt@physics.ucsb.edu"},
    {name = "James Davies", email = "jdavies@mpia.de"},
]
description = "Optimal Fitting, Debiasing, and Cosmic Ray Rejection for Detectors Read Out Up-the-Ramp"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "jwst",
    "numpy",
    "scipy",
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
]
test = [
    "pytest",
    "pytest-doctestplus",
    "flake8",
    "flake8-pyproject",
    "codecov",
    "pytest-cov",
]

[project.urls]
"Bug Tracker" = "https://github.com/jdavies-st/optimal-ramp-fit/issues"
"Source Code" = "https://github.com/jdavies-st/optimal-ramp-fit"


[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.flake8]
max-line-length = 130
exclude = [
    'docs',
    '.tox',
    '.eggs',
    'build',
]
